the new function names before the old functions are completely removed. (Big help from
Devin J. Pohly in structuring the code to enable this peaceful transition.)


Version 3.2.1 - in development
------------------------------
- Improved performance of `cpp_style_comment` and `c_style_comment` Regex expressions.
  PR submitted by Gabriel Gerlero, nice work, thanks!


Version 3.2.0 - October, 2024
-------------------------------
- Discontinued support for Python 3.6, 3.7, and 3.8. Adopted new Python features from
  Python versions 3.7-3.9:
  - Updated type annotations to use built-in container types instead of names
    imported from the `typing` module (e.g., `list[str]` vs `List[str]`).
  - Reworked portions of the packrat cache to leverage insertion-preserving ordering
    in dicts (including removal of uses of `OrderedDict`).
  - Changed `pdb.set_trace()` call in `ParserElement.set_break()` to `breakpoint()`.
  - Converted `typing.NamedTuple` to `dataclasses.dataclass` in railroad diagramming
    code.
  - Added `from __future__ import annotations` to clean up some type annotations.
  (with assistance from ISyncWithFoo, issue #535, thanks for the help!)

- POSSIBLE BREAKING CHANGES

    The following bugfixes may result in subtle changes in the results returned or
    exceptions raised by pyparsing.

    - Fixed code in `ParseElementEnhance` subclasses that
      replaced detailed exception messages raised in contained expressions with a
      less-specific and less-informative generic exception message and location.

      If your code has conditional logic based on the message content in raised
      `ParseExceptions`, this bugfix may require changes in your code.

    - Fixed bug in `transform_string()` where whitespace
      in the input string was not properly preserved in the output string.

      If your code uses `transform_string`, this bugfix may require changes in
      your code.

    - Fixed bug where an `IndexError` raised in a parse action was