@@ -17,6 +17,9 @@ Version 3.2.1 - in development
 - Improved performance of `cpp_style_comment` and `c_style_comment` Regex expressions.
   PR submitted by Gabriel Gerlero, nice work, thanks!
 
+- Add missing type annotations to `match_only_at_col`, `replace_with`, `remove_quotes`,
+  `with_attribute`, and `with_class`. Issue #585 reported by rafrafrek.
+
 
 Version 3.2.0 - October, 2024
 -------------------------------
